tests/ui/issues/issue-22706.rs
fn is_copy<T: ::std::marker<i32>::Copy>() {}
//~^ ERROR type arguments are not allowed on module `marker` [E0109]
fn main() {}
